--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p This is Sequelize greeting you :)
+  p This is DFUNKT REBORN!
 
   h2 Creating a new user
   form(action="/users/create", method="post")
@@ -14,21 +14,5 @@ block content
   ul
   each user in users
     li
-      = user.username
-      | &nbsp;
-      | (
-      a(href="/users/" + user.id + "/destroy") Destroy
-      | )
-      ul
-        li
-          | Creating a new task:
-          form(action="/users/" + user.id + "/tasks/create", method="post", style="display: inline")
-            input(type="text", name="title")
-            input(type="submit")
-        each task in user.Tasks
-          li
-            = task.title
-            | &nbsp;
-            | (
-            a(href="/users/" + user.id + "/tasks/" + task.id + "/destroy") Destroy
-            | )
+      = user.name
+    
