--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,14 @@ block content
 
   h2 Creating a new user
   form(action="/users/create", method="post")
-    input(type="text", name="username")
+    input(type="text", name="name")
+    input(type="submit")
+    
+  h2 Create a new Role
+  form(action="/roles/create", method="post")
+    input(type="text", name="name", placeholder="Name")
+    input(type="text", name="description", placeholder="Desc")
+    input(type="email", name="email", placeholder="mail")
     input(type="submit")
 
   h2 Users
@@ -15,4 +22,17 @@ block content
   each user in users
     li
       = user.name
-    
+      
+  h2 Roles
+  
+  ul
+  each role in roles
+    li
+      ul
+        li
+          = role.name
+        li    
+          = role.description
+        li    
+          = role.email
+        
