SUbmitting mandates by user name works.
No need to enter ID, just input the name and the system will find the appropriate user. We can copy the same system for roles, and we also need to add dropdowns that are sent along.

ALso, any spelling mistake will result in failure, so we need to add along a dropdown (or select) to minimize user error. We need to:

 * Add dropdown/select
 * Handle failure
 * Use same system for roles
 * See if we can compare case-insensitively
 * Think about name clashes?

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,8 +20,13 @@ block content
   form(action="/mandates/create", method="post")
     input(type="date", name="start")
     input(type="date", name="end")
-    input(type="number", name="userId", placeholer="User")
     input(type="number", name="roleId")
+    input(type="text", name="username", placeholer="User")
+    //input(list="roles", name="role")
+      //datalist#roles 
+        //option(value="qwe")
+        //option(value="foo")
+        //option(value="bar")
     input(type="submit")
     
   
@@ -54,6 +59,10 @@ block content
       li
         = mandate.UserId
       li
-        = mandate.RoleId
+        = mandate.RoleId    
+      li
+        = mandate.start
+      li
+        = mandate.end
       
         
