minor changes to css stuff

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
           div(class='col-md-8')
             h2 Dfunkt
           div(class='header-right col-md-2')
-            a(href='https://github.com/datasektionen/Docs', class='primary-action') Github
+            a(href='https://github.com/datasektionen/dfunkt', class='primary-action') Github
         div(class='clear')
     div(id='content')
       div(class='row')
