--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title= dfunkt
+    title Dfunkt
     link(rel='stylesheet', href='http://aurora.froyo.datasektionen.se/', type="text/css")
+    link(rel="icon", href="/public/favicon.png", type="image/png")
     script(type="text/javascript").
       function getLoginUrl() {
         var callback = ""
