--- a/views/index.jade
+++ b/views/index.jade
@@ -35,7 +35,8 @@ block content
 
           h2 Creating a new user
           form(action="/users/create", method="post")
-            input(type="text", name="name")
+            input(type="text", name="first_name")
+            input(type="text", name="last_name")
             input(type="text", name="kthid")
             input(type="submit")
             
@@ -53,7 +54,7 @@ block content
             input(type="text", list="users", name="username", placeholder="User")
             datalist#users 
               each user in users
-                option(value=user.name)
+                option(value=user.first_name + " " + user.last_name)
             input(type="text", list="roles", name="rolename", placeholder="Role")
             datalist#roles 
               each role in roles
@@ -70,7 +71,9 @@ block content
           each user in users
             p
               li
-                = user.name
+                = user.first_name
+              li
+                = user.last_name
               li 
                 = user.kthid + "\@kth.se"
               li
