--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,4 +52,16 @@ html
       }
     script(async="", src="http://methone.datasektionen.se").
   body
+    div(id='methone-container-replace')
+    div(id='application' class='purple')
+      header
+        div(class='header-inner')
+          div(class='row')
+            div(class='header-left col-md-2')
+              a(href='/') Tillbaka
+            div(class='col-md-8')
+              h2 Dfunkt
+            div(class='header-right col-md-2')
+              a(href='https://github.com/datasektionen/dfunkt', class='primary-action') Github
+          div(class='clear')
     block content
