--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -9,8 +9,8 @@ div(class='col-sm-4 col-md-3')
     ul
       li
         a(href='/') Hem
-    #user
-    if user
+    #isadmin
+    if isadmin
       ul
         li
           a(href='/admin') Adminstrativt
