--- a/views/admin.jade
+++ b/views/admin.jade
@@ -6,3 +6,32 @@ block content
       include sidebar.jade
       div(class='col-sm-8 col-md-9')
         h1 Adminstrativa saker
+
+        h2 Skapa användare
+        form(action="/users/create", method="post")
+          input(type="text", name="first_name" placeholder='förnamn')
+          input(type="text", name="last_name" placeholder='efternamn')
+          input(type="text", name="kthid" placeholder='kth-id, ex. jsimo')
+          input(type="submit")
+          
+        h2 Skapa roller
+        form(action="/roles/create", method="post")
+          input(type="text", name="title", placeholder="titel")
+          input(type="text", name="description", placeholder="beskrivning")
+          input(type="email", name="email", placeholder="email")
+          input(type="submit")
+          
+        h2 Skapa mandat
+        form(action="/mandates/create", method="post")
+          input(type="date", name="start")
+          input(type="date", name="end")
+          select(name="userId", placeholder="User")
+            each user in users
+              option(value=user.id)
+                = user.first_name + " " + user.last_name
+          select(name="roleId", placeholder="Role")
+            each role in roles
+              option(value=role.id)
+                = role.title
+            
+          input(type="submit")
