--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,12 @@ block content
                 = "Databas id: "+user.id
               li
                 form(action="/users/"+user.id+"/destroy", method="delete")
-                  input(type="submit", value="Delete")
+                  input(type="submit", value="Radera")
+              li
+                form(action="/users/"+user.id+"/make-admin", method="post")
+                  input(type="submit", value="Gör till administratör")
+
+
               
           h2 Roller
           
