--- a/views/index.jade
+++ b/views/index.jade
@@ -32,6 +32,8 @@ block content
                 = role.description
               li    
                 = role.email
+              li
+                = "Typ: " + role.type
               li    
                 = "Database id: "+role.id
               li
