User lookup done.

--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -9,6 +9,8 @@ div(class='col-sm-4 col-md-3')
     ul
       li
         a(href='/') Hem
+      li
+        a(href='/kthpeople') Användar-lookup
     #isadmin
     if isadmin
       ul
