--- a/views/kthresults.jade
+++ b/views/kthresults.jade
@@ -6,6 +6,7 @@ block content
         include sidebar.jade
         div(class='col-sm-8 col-md-9')
           h1 Resultat
+          p Listan kan vara inkomplett eller för stor. Stava inte fel och skriv så mycket du kan. Det här är tyvärr inte google, sökningen är inte "smart".
           each result in results
             h3 
               = result.cn
@@ -13,4 +14,5 @@ block content
               = "kthid: "
               b 
                 = result.uid
+            hr
 
