preparing for dokku

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,7 +35,7 @@ html
         delta_invert: true,
         topbar_items: []
       }
-    script(async="", src="http://methone.datasektionen.se").
+    script(async="", src="//methone.datasektionen.se").
   body
     div(id='methone-container-replace')
     div(id='application' class='purple')
