Small frontend changes

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ block content
               li    
                 = role.email
               li
-                = "Typ: " + role.type
+                = "Grupp: " + role.type
               li    
                 = "Database id: "+role.id
               li
