--- a/views/kthresults.jade
+++ b/views/kthresults.jade
@@ -5,7 +5,8 @@ block content
       div(class='row')
         include sidebar.jade
         div(class='col-sm-8 col-md-9')
-          h1 Resultat
+          h1 
+            = "Resultat för \"" + query + "\":"
           p Listan kan vara inkomplett eller för stor. Stava inte fel och skriv så mycket du kan. Det här är tyvärr inte google, sökningen är inte "smart".
           each result in results
             h3 
