Now has previous dfunk data Loads of changes too many to list properly, sry :(.

--- a/views/error.jade
+++ b/views/error.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= "Error: " + message
+  pre= "Error: " + message
 
   h2
     a(href="https://github.com/datasektionen/dfunkt/issues/new")
