--- a/views/admin.jade
+++ b/views/admin.jade
@@ -7,6 +7,12 @@ block content
       div(class='col-sm-8 col-md-9')
         h1 Adminstrativa saker
 
+        h2 Skapa grupp
+        form(action="/groups/create", method="post")
+          input(type="text", name="name" placeholder='gruppnamn')
+          input(type="text", name="identifier" placeholder='identifierare, ex. Drek')
+          input(type="submit")
+
         h2 Skapa användare
         form(action="/users/create", method="post")
           input(type="text", name="first_name" placeholder='förnamn')
@@ -19,14 +25,10 @@ block content
           input(type="text", name="title", placeholder="titel")
           input(type="text", name="description", placeholder="beskrivning")
           select(name="type")
-            option(value="drek")
-              = "D-rektoratet"
-            option(value="project")
-              = "Projekt"
-            option(value="dfunk")
-              = "d-Funktionärer"
-            option(value="other")
-              = "Annat"
+            each group in groups
+              option(value=group.identifier)
+                = group.name
+          input(type="text", name="identifier", placeholder="identifierare")
           input(type="email", name="email", placeholder="email")
           input(type="submit")
 
