improved views some more

--- a/views/user.jade
+++ b/views/user.jade
@@ -5,9 +5,8 @@ block content
       div(class='row')
         include sidebar.jade
         div(class='col-sm-8 col-md-9') 
-          if mandates[0].User
           h1
-            = mandates[0].User.first_name + " " + mandates[0].User.last_name
+            = userobj.first_name + ' ' + userobj.last_name
           table(class='table')
             thead
               tr
