--- a/views/admin.jade
+++ b/views/admin.jade
@@ -26,7 +26,7 @@ block content
           input(type="text", name="description", placeholder="beskrivning")
           select(name="type")
             each group in groups
-              option(value=group.identifier)
+              option(value=group.id)
                 = group.name
           input(type="text", name="identifier", placeholder="identifierare")
           input(type="email", name="email", placeholder="email")
