--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
     div(id='content')
+      script(type="text/javascript").
+
       div(class='row')
         include sidebar.jade
         div(class='col-sm-8 col-md-9')
