--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,12 @@ html
     title Dfunkt
     link(rel='stylesheet', href='http://aurora.froyo.datasektionen.se/', type="text/css")
     link(rel="icon", href="/public/favicon.png", type="image/png")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js")
+
     script(type="text/javascript").
       function getLoginUrl() {
         var callback = ""
