--- a/views/kthsearch.jade
+++ b/views/kthsearch.jade
@@ -5,18 +5,9 @@ block content
     div(class='row')
       include sidebar.jade
       div(class='col-sm-8 col-md-9')
+        h2 Sök efter personer på KTH med namn eller kthid.
         div(id='reactform')
-        hr
-        h2 Vad har person X för kth-id? Leta med namn nedan:
-        form(action="/kthpeople/search", method="get")
-          input(type="text", name="query", placeholder='Namn')
-          input(type="submit", value="Sök med namn")
-        div(id="name-results")
 
-        h2 Vem tillhör detta kth-id? Slå upp kth-id nedan:
-        form(action="/kthpeople/kthid", method="get")
-          input(type="text", name="kthid", placeholder='Kth-id')
-          input(type="submit", value="Slå upp kth-id")
   script(type="text/babel").
     function zfingerParseUser(user) {
       return {
@@ -24,79 +15,75 @@ block content
         kthid: user.uid,
       };
     }
-    var SearchBar = React.createClass({
-      getInitialState: function() {
-        return {query: "Name to search for"};
-      },
-      onClick: function() {
-        this.props.handleSubmit(this.state.query);
-      },
-      onChange: function(event) {
-        this.setState({query: event.target.value});
-      },
-      render: function() {
-        return (
-          <div>
-            <input type='text' onChange={this.onChange} value={this.state.query} />
-            <input type='button' onClick={this.onClick} value="Sök med namn"/>
-          </div>
-        );
-      },
-    });
 
     var SearchBox = React.createClass({
       getInitialState: function() {
-        return {data: []};
+        return {
+          data: [],
+          searching: false,
+          didSearch: false,
+        };
       },
       handleSubmit: function(query) {
+        this.setState({searching: true, didSearch: true, data: []});
         $.ajax({
           url: "/kthpeople/search/" + encodeURIComponent(query),
           dataType: "json",
           cache: false,
           success: function(data) {
             console.log(data);
-            this.setState({data: data.results.map(zfingerParseUser)});
+            this.setState({data: data.results.map(zfingerParseUser), searching: false});
           }.bind(this),
           failure: function(xhr, status, err) {
             console.error(this.props.url, status, err.toString());
+            this.setState({searching: false});
           }.bind(this),
         });
-        alert(query);
+        console.log('Sending search for "' + query + '"');
       },
       render: function() {
+        var results;
+        if (this.state.searching) {
+          results = <p>Söker...</p>;
+        } else if (this.state.didSearch && this.state.data.length == 0) {
+          results = <p>Inga resultat alls. Du stavade rätt va?</p>;
+        } else {
+          results = <ResultList data={this.state.data} />;
+        }
         return (
-          <div>
-            <SearchBar handleSubmit={this.handleSubmit} />
-            <ResultList data={this.state.data} />
-          </div>
+            <div>
+              <SearchBar handleSubmit={this.handleSubmit} />
+              {results}
+            </div>
         );
       }
     });
 
-    var ResultBox = React.createClass({
+    var SearchBar = React.createClass({
       getInitialState: function() {
-        return {data: []};
+        return {query: ""};
       },
-      getResults: function() {
-        $.ajax({
-          url: "/kthpeople/search/Jesper%20S",
-          dataType: "json",
-          cache: false,
-          success: function(data) {
-            console.log(data);
-            this.setState({data: data.results.map(zfingerParseUser)});
-          }.bind(this),
-          failure: function(xhr, status, err) {
-            console.error(this.props.url, status, err.toString());
-          }.bind(this),
-        });
+      onSubmit: function() {
+        this.props.handleSubmit(this.state.query);
+        return false;
       },
-      componentDidMount: function() {
-        //this.getResults();
+      onChange: function(event) {
+        this.setState({query: event.target.value});
+      },
+      onKey: function(e) {
+        const enter = 13;
+        if (enter == e.keyCode || enter == e.charCode) { // If it's enter
+          this.onSubmit();
+        } 
       },
       render: function() {
-        return <ResultList data={this.state.data} />;
-      }
+        return (
+          <div onKeyPress={this.onKey} >
+            <input type='text' placeholder="Namn" onChange={this.onChange} value={this.state.query} />
+            <input type='submit' onClick={this.onSubmit} value="Sök"/>
+          </div>
+        );
+      },
     });
 
     var ResultList = React.createClass({
@@ -128,10 +115,6 @@ block content
 
 
     var results = [{fullname: "Steve Hopkins", kthid: "steve-o"}, {fullname: "Jeremiah Saltings", kthid: "jerry"}];
-    ReactDOM.render(
-      <ResultBox data={results} />,
-      document.getElementById('name-results')
-    );
     ReactDOM.render(
       <SearchBox data={results} />,
       document.getElementById('reactform')
